Corrects visibility of notification.

--- a/template/sassafras/_overlay.scss
+++ b/template/sassafras/_overlay.scss
@@ -17,3 +17,13 @@
   width: 100%;
   height: 100%;
 }
+
+.notification {
+  @include overlay(3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  text-align: center;
+}
